@@ -71,7 +71,6 @@ import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrConfig;
 import org.apache.solr.core.SolrResourceLoader;
-import org.apache.solr.handler.configsets.ConfigSetAPIBase;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.RawResponseWriter;
 import org.apache.solr.response.SolrQueryResponse;
@@ -87,8 +86,7 @@ import org.slf4j.LoggerFactory;
 /** All V2 APIs have a prefix of /api/schema-designer/ */
 public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
-  private static final Set<String> excludeConfigSetNames =
-      new HashSet<>(Arrays.asList(DEFAULT_CONFIGSET_NAME, BLOB_STORE_ID));
+  private static final Set<String> excludeConfigSetNames = Set.of(DEFAULT_CONFIGSET_NAME);
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
@@ -173,7 +171,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     // don't fail if loading sample docs fails
     try {
-      responseMap.put("numDocs", configSetHelper.getStoredSampleDocs(configSet).size());
+      responseMap.put("numDocs", configSetHelper.retrieveSampleDocs(configSet).size());
     } catch (Exception exc) {
       log.warn("Failed to load sample docs from blob store for {}", configSet, exc);
     }
@@ -245,8 +243,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       data = in.readAllBytes();
     }
     Exception updateFileError = null;
-    boolean requestIsTrusted =
-        ConfigSetAPIBase.isTrusted(req.getUserPrincipal(), coreContainer.getAuthenticationPlugin());
+
     if (SOLR_CONFIG_XML.equals(file)) {
       // verify the updated solrconfig.xml is valid before saving to ZK (to avoid things blowing up
       // later)
@@ -278,18 +275,13 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       throw new IOException(
           "Failed to save data in ZK at path: " + zkPath, SolrZkClient.checkInterrupted(e));
     }
-    // If the request is untrusted, and the configSet is trusted, remove the trusted flag on the
-    // configSet.
-    if (configSetHelper.isConfigSetTrusted(mutableId) && !requestIsTrusted) {
-      configSetHelper.removeConfigSetTrust(mutableId);
-    }
 
     configSetHelper.reloadTempCollection(mutableId, false);
 
     ManagedIndexSchema schema = loadLatestSchema(mutableId);
     Map<Object, Throwable> errorsDuringIndexing = null;
     SolrException solrExc = null;
-    List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     String[] analysisErrorHolder = new String[1];
     if (!docs.isEmpty()) {
       String idField = schema.getUniqueKeyField().getName();
@@ -325,7 +317,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     final String idField = getRequiredParam(UNIQUE_KEY_FIELD_PARAM, req);
     String docId = req.getParams().get(DOC_ID_PARAM);
 
-    final List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    final List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     String textValue = null;
     if (StrUtils.isNullOrEmpty(docId)) {
       // no doc ID from client ... find the first doc with a non-empty string value for fieldName
@@ -353,7 +345,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
     }
 
     if (textValue != null) {
-      Map<String, Object> analysis = configSetHelper.analyzeField(configSet, fieldName, textValue);
+      var analysis = configSetHelper.analyzeField(configSet, fieldName, textValue);
       rsp.getValues().addAll(Map.of(idField, docId, fieldName, textValue, "analysis", analysis));
     }
   }
@@ -436,7 +428,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     ManagedIndexSchema schema = loadLatestSchema(mutableId);
     Map<String, Object> response =
-        buildResponse(configSet, schema, null, configSetHelper.getStoredSampleDocs(configSet));
+        buildResponse(configSet, schema, null, configSetHelper.retrieveSampleDocs(configSet));
     response.put(action, objectName);
     rsp.getValues().addAll(response);
   }
@@ -475,7 +467,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
 
     // re-index the docs if no error to this point
     final ManagedIndexSchema schema = loadLatestSchema(mutableId);
-    List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+    List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
     Map<Object, Throwable> errorsDuringIndexing = null;
     String[] analysisErrorHolder = new String[1];
     if (solrExc == null && !docs.isEmpty()) {
@@ -578,7 +570,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       int rf = req.getParams().getInt("replicationFactor", 1);
       configSetHelper.createCollection(newCollection, configSet, numShards, rf);
       if (req.getParams().getBool(INDEX_TO_COLLECTION_PARAM, false)) {
-        List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+        List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
         if (!docs.isEmpty()) {
           ManagedIndexSchema schema = loadLatestSchema(mutableId);
           errorsDuringIndexing =
@@ -780,7 +772,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
           mutableId,
           version,
           currentVersion);
-      List<SolrInputDocument> docs = configSetHelper.getStoredSampleDocs(configSet);
+      List<SolrInputDocument> docs = configSetHelper.retrieveSampleDocs(configSet);
       ManagedIndexSchema schema = loadLatestSchema(mutableId);
       errorsDuringIndexing =
           indexSampleDocsWithRebuildOnAnalysisError(
@@ -836,7 +828,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
       if (!docs.isEmpty()) {
         // user posted in some docs, if there are already docs stored in the blob store, then add
         // these to the existing set
-        List<SolrInputDocument> stored = configSetHelper.getStoredSampleDocs(configSet);
+        List<SolrInputDocument> stored = configSetHelper.retrieveSampleDocs(configSet);
         if (!stored.isEmpty()) {
           // keep the docs in the request as newest
           ManagedIndexSchema latestSchema = loadLatestSchema(getMutableId(configSet));
@@ -845,14 +837,14 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
                   latestSchema.getUniqueKeyField().getName(), stored, MAX_SAMPLE_DOCS);
         }
 
-        // store in the blob store so that we always have access to these docs
+        // store in the Filestore so that we always have access to these docs
         configSetHelper.storeSampleDocs(configSet, docs);
       }
     }
 
     if (docs == null || docs.isEmpty()) {
       // no sample docs in the request ... find in blob store (or fail if no docs previously stored)
-      docs = configSetHelper.getStoredSampleDocs(configSet);
+      docs = configSetHelper.retrieveSampleDocs(configSet);
 
       // no docs? but if this schema has already been published, it's OK, we can skip the docs part
       if (docs.isEmpty() && !configExists(configSet)) {
@@ -984,9 +976,7 @@ public class SchemaDesignerAPI implements SchemaDesignerConstants {
   }
 
   protected CloudSolrClient cloudClient() {
-    return coreContainer
-        .getSolrClientCache()
-        .getCloudSolrClient(coreContainer.getZkController().getZkServerAddress());
+    return coreContainer.getZkController().getSolrClient();
   }
 
   protected ZkStateReader zkStateReader() {
